# rust-learn

add/add_one/: Cargo.toml
adder/src/: lib.rs
adder/tests/: integration_test.rs
chapter05_rectangles/: Cargo.toml
chapter05_rectangles/src/: main.rs
chapter05_struct/: Cargo.toml
chapter05_struct/src/: main.rs
chapter06_enum/: Cargo.toml
chapter06_enum/src/: main.rs
chapter06_match/: Cargo.toml
chapter06_match/src/: main.rs
chapter08_collections/: Cargo.toml
chapter08_collections/src/: main.rs
chapter09_error_handling/: Cargo.toml
chapter09_error_handling/src/: main.rs
chapter11_generics/: Cargo.toml
chapter11_lifetime/: Cargo.toml
chapter11_trait/: Cargo.toml
chapter12_auto_test/: Cargo.toml
chapter13_performance/: Cargo.toml
chapter15_reference_cycles/: Cargo.toml
chapter16_message_passing/: Cargo.toml
chapter16_shared_stated/: Cargo.toml
chapter16_thread/: Cargo.toml
chapter17_design_patterns/: Cargo.toml
chapter17_object_oriented/: Cargo.toml
chapter17_trait_objects/: Cargo.toml
chapter18_patterns/: Cargo.toml
chapter19_advanced_function/: Cargo.toml
chapter19_advanced_macro/: Cargo.toml  a.out
chapter19_advanced_macro/src/: a.out  main.rs  test.c
chapter19_advanced_traits/: Cargo.toml
chapter19_advanced_type/: Cargo.toml
chapter19_unsafe/: Cargo.toml
chapter20_web_server/: Cargo.toml
chapter4_owner_shipper/: Cargo.toml
chardet14_release_profiles/: Cargo.toml
guessing_game/: Cargo.toml
hello_cargo/: Cargo.toml
hello_wordl/: main.rs
minigrep/: poem.txt
test2/: Cargo.toml  a.out
(+38 files in other folders)
